CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (vstab)
SET(CMAKE_CXX_STANDARD 14)


FIND_PACKAGE(Boost 1.40 COMPONENTS program_options REQUIRED)
SET(OpenCV_DIR "/usr/lib/opencv")
FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core imgproc highgui features2d xfeatures2d)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_EXECUTABLE(vstab
  ${PROJECT_SOURCE_DIR}/vstab.cpp
  ${PROJECT_SOURCE_DIR}/video.cpp
  ${PROJECT_SOURCE_DIR}/stabilize.cpp
)
TARGET_LINK_LIBRARIES(vstab LINK_PUBLIC ${Boost_LIBRARIES} ${OpenCV_LIBS})
