CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (vstab)
SET(CMAKE_CXX_STANDARD 14)


FIND_PACKAGE(Boost 1.40 COMPONENTS program_options REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core imgproc highgui features2d xfeatures2d)
FIND_PACKAGE(Ceres REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${CERES_INCLUDE_DIRS})

ADD_EXECUTABLE(vstab
  ${PROJECT_SOURCE_DIR}/vstab.cpp
  ${PROJECT_SOURCE_DIR}/video.cpp
  ${PROJECT_SOURCE_DIR}/stabilize.cpp
  ${PROJECT_SOURCE_DIR}/registration.cpp
  ${PROJECT_SOURCE_DIR}/crop.cpp
  ${PROJECT_SOURCE_DIR}/fit.cpp
)
TARGET_LINK_LIBRARIES(vstab LINK_PUBLIC ${Boost_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
